# browser-mcp

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  server.py  test.py
.github/workflows/: python-publish.yml
browser_mcp/: __main__.py  server.py
script/: release  test
