[project]
name = "browser-use-mcp"
version = "0.1.0"
description = "MCP server for browser-use"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.3.0",
    "browser-use>=0.1.4",
    "ruff>=0.9.10",
    "langchain-openai>=0.3.1",
    "dotenv>=0.9.9",
    "playwright>=1.50.0",
]
